MouseEvent pageX Property added

--- a/Doubts/Doubts.html
+++ b/Doubts/Doubts.html
@@ -10,7 +10,23 @@
 </head>
 
 <body>
-    <script src="Doubts.css"></script>
+    <!-- MouseEvent pageX Property -->
+    <h1>MouseEvent pageX Property</h1>
+    <p>• The pageX property returns the horizontal coordinate (according to the document) of the mouse pointer when a mouse event was triggered.</p>
+    <p>• The document is the web page.</p>
+    <p>• <strong>Tip: </strong>To get the vertical coordinate (according to the document) of the mouse pointer, use the pageY property.</p>
+    <p>• <strong>Note: </strong>This property is read-only.</p>
+    <p>• <strong>Note: </strong>This property is non-standard, but works in most major browsers.</p>
+    <br>
+
+    <!-- EXAMPLE 1 -->
+    <p>• <strong>EXAMPLE 1 ||</strong> Output the coordinates of the mouse pointer when the mouse button is clicked on an element:</p>
+    <h2 onclick="showCoords(event)">Click this heading to get the x (horizontal) and y (vertical) coordinates of the mouse pointer when it was clicked.</h2>
+    <p><strong>Tip: </strong>Try to click different places in the heading.</p>
+    <p id="demo"></p>
+    <hr>
+
+    <script src="Doubts.js"></script>
 </body>
 
 </html>
