HTML DOM Element offsetTop added

--- a/Doubts/Doubts.html
+++ b/Doubts/Doubts.html
@@ -26,6 +26,26 @@
     <p id="demo"></p>
     <hr>
 
+    <!-- HTML DOM Element offsetTop -->
+    <h1>HTML DOM Element offsetTop</h1>
+    <p>• The offsetTop property returns the top position (in pixels) relative to the parent.</p>
+    <p>• The returned value includes:
+        <br> -- the top position, and margin of the element
+        <br> -- the top padding, scrollbar and border of the parent
+    </p>
+    <p>• The offsetTop property is read-only.</p>
+    <br>
+
+    <!-- EXAMPLE 1 -->
+    <p>• <strong>EXAMPLE 1 ||</strong> Get the offsetTop position of "myDIV": </p>
+    <div id="test">
+        <p>Click the button to get offsetTop for the test div.</p>
+        <p><button onclick="offsetTop1()">Try it</button></p>
+        <p>offsetTop is: <span id="demoOT"></span></p>
+    </div>
+    <br>
+    <hr>
+
     <script src="Doubts.js"></script>
 </body>
 
