HTML DOM Element offsetHeight added

--- a/Doubts/Doubts.html
+++ b/Doubts/Doubts.html
@@ -24,7 +24,7 @@
     <h2 onclick="showCoords(event)">Click this heading to get the x (horizontal) and y (vertical) coordinates of the mouse pointer when it was clicked.</h2>
     <p><strong>Tip: </strong>Try to click different places in the heading.</p>
     <p id="demo"></p>
-    <hr>
+    <hr size="5" noshade>
 
     <!-- HTML DOM Element offsetTop -->
     <h1>HTML DOM Element offsetTop</h1>
@@ -44,7 +44,21 @@
         <p>offsetTop is: <span id="demoOT"></span></p>
     </div>
     <br>
-    <hr>
+    <hr size="5" noshade>
+
+    <!-- HTML DOM Element offsetHeight -->
+    <h1>HTML DOM Element offsetHeight</h1>
+    <p>• The offsetHeight property returns the viewable height of an element (in pixels), including padding, border and scrollbar, but not the margin.</p>
+    <p>• The offsetHeight property is read-only.</p>
+    <br>
+
+    <!-- EXAMPLE 1 -->
+    <p>• <strong>EXAMPLE 1 ||</strong> Display the height and width of "myDIV" including padding and border:</p>
+    <div id="myDIV">
+        <b>Information about this div:</b><br> Height: 250px <br> Width: 400px <br> Padding: 10px <br> Margin: 15px <br> Border: 5px <br>
+        <p id="demoOH"></p>
+    </div>
+    <hr size="5" noshade>
 
     <script src="Doubts.js"></script>
 </body>
