JavaScript Number toFixed() added

--- a/Doubts/Doubts.html
+++ b/Doubts/Doubts.html
@@ -60,6 +60,22 @@
     </div>
     <hr size="5" noshade>
 
+    <!-- JavaScript Number toFixed() -->
+    <h1>JavaScript Number toFixed()</h1>
+    <p>• The toFixed() method converts a number to a string.</p>
+    <p>• The toFixed() method rounds the string to a specified number of decimals.</p>
+    <p>• If the number of decimals are higher than in the number, zeros are added.</p>
+    <br>
+
+    <!-- EXAMPLE 1 || -->
+    <p>• <strong>EXAMPLE 1 ||</strong> toFixed() converts a number to a string, rounded to a specified number of decimals. </p>
+    <p id="demoTF"></p>
+    <br>
+
+    <p>• <strong>EXAMPLE 2 ||</strong> toFixed() converts a number to a string, rounded to a specified number of decimals. </p>
+    <p id='demoTF1'></p>
+    <hr size="5" noshade>
+
     <script src="Doubts.js"></script>
 </body>
 
