--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <video src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" class="flex" width="765" height="430" loop controls></video>
+        <div class="speed">
+            <div class="speed-bar">1x</div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
