--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Video Speed Controller</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video-Speed-Controller</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
+  <body>
     <div class="wrapper">
-        <video src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" class="flex" width="765" height="430" loop controls></video>
-        <div class="speed">
-            <div class="speed-bar">1x</div>
-        </div>
+      <video
+        src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4"
+        class="flex"
+        width="765"
+        height="430"
+        loop
+        controls
+      ></video>
+      <div class="speed">
+        <div class="speed-bar">1x</div>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
